# pyrgo

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
src/githrun/: __init__.py  cli.py  core.py  network.py  utils.py
test/: test_githrun.py
vscode-githrun/: package.json  vscode-githrun-0.0.2.vsix  vscode-githrun-0.0.3.vsix
vscode-githrun/src/: extension.ts
